[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metacc"
version = "1.0.0"
description = "A C language metaprogramming tool based on libclang."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "houyuwen", email = "houyuwenE@outlook.com"}
]
keywords = ["embedded", "metaprogramming", "libclang", "code-generation", "rtos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Embedded Systems"
]

dependencies = [
    "clang>=14.0",
]

[project.scripts]
metacc = "metacc:main"

[tool.setuptools]
py-modules = ["metacc"]
