[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metacc"
version = "1.0.0"
description = "C metaprogramming tool backed by libclang for high-performance Embedded SDK development."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "houyuwen", email = "houyuwenE@outlook.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Topic :: Software Development :: Code Generators",
]

dependencies = [
    "libclang>=18.0.0", 
]

[project.scripts]
metacc = "metacc:main"